feat: added a simple leaderboard + modified timeline schema to provide more info for frontend + fix some utils errors
